Updated proj metadata

--- a/pom.xml
+++ b/pom.xml
@@ -10,35 +10,14 @@
     License for the - specific language governing permissions and limitations 
     - under the License. -->
 
-<!-- derived from https://avro.apache.org/docs/1.8.1/examples/ -->
-
-<!-- 
-- Added by Shawn Becker <scbboston@gmail.com> on May 14, 2017
--
-- Eclipse modifications required: 
-- 1. create avro.sourceDirectory ${project.basedir}/src/main/resources/avro as defined in properties
-- 2. put .avsc schema files into avro.sourceDirectory 
-- 3. create avro.outputDirectory ${project.basedir}/src/main/java/avro as defined in properties
-- 4. add avro.outputDirectory as a source directory to project's BuildPath 
-- 5. create two maven Run Configurations: 
--    "mvn SpecificMain" with goals 
--        clean generate-sources compile exec:java -Dexec.mainClass="example.SpecificMain" 
--    "mvn GenericMain" with goals 
--        clean compile exec:java -Dexec.mainClass="example.GenericMain" 
-- 6. NOTE that avro-maven-plugin needs to be placed under project/build/plugins 
--    because avro java source files will not be generated if the plugin is 
--    placed under project/build/pluginManagement
-- 7. just ignore the pom.xml warning "Plugin execution not covered by 
- -   lifecycle configuration"
--->
-
+<!-- derived from https://avro.apache.org/docs/1.10.0/examples/ -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>example</groupId>
-    <artifactId>java-example</artifactId>
+    <groupId>io.peleg</groupId>
+    <artifactId>avro-java-time-example</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>java-example</name>
     <url>http://maven.apache.org</url>
 
