--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
             <artifactId>avro</artifactId>
             <version>1.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
